# ESP32-Light-Sensor-Monitor

./: CMakeLists.txt  LICENSE  README.md  light_sensor.ino  sensor_task.c
main/: CMakeLists.txt  light_sensor_main.c
main/hardware/: lcd1602_i2c.c  lcd1602_i2c.h  light_sensor.c  light_sensor.h
main/include/: common_defs.h  config.h  queue_defs.h
main/tasks/: control_task.c  control_task.h  display_task.c  display_task.h  monitor_task.c  monitor_task.h  sensor_task.c  sensor_task.h
